Updated tests for DAO and services layers